fix for #1588: disable double scrollbar on preview, improve iframe window size

--- a/jsapp/kobo/stylesheets/partials/_modals_iframes.scss
+++ b/jsapp/kobo/stylesheets/partials/_modals_iframes.scss
@@ -13,8 +13,8 @@
 }
 
 .enketo-holder {
-  width: 760px;
-  margin-left: -400px;
+  width: 820px;
+  margin-left: -440px;
   position: fixed;
   top: 5%;
   left: 50%;
@@ -23,9 +23,8 @@
   border:2px solid #5CB5EB;
   padding:20px;
   border-radius: 4px;
-  z-index: 11;
-  -webkit-overflow-scrolling:touch;
-  overflow: auto;
+  z-index: 101;
+  overflow: hidden;
   iframe {
     width: 100%;
     height:100%;
@@ -43,6 +42,14 @@
       font-size: 20px;
     }
   }
+}
+
+.touch .enketo-holder {
+  width: 94%;
+  left: 3%; 
+  margin-left: 0px;
+  -webkit-overflow-scrolling:touch;
+  overflow-y: scroll; 
 }
 
 .enketo-iframe-icon {
